# donair-safe

./: .editorconfig  .gitignore  README.md  donair-safe.cabal  donair.hs  errors.hs  s3.hs  stack.yaml
app/: Main.hs
src/: KMS.hs  S3.hs  Utils.hs
