name:                donair-safe
version:             0.1.0
synopsis:            A tool to interface AWS S3 and KMS 
description:         A tool to interface AWS S3 and KMS 
homepage:            https://github.com/obihann/donair-safe#readme
license:             GPL-3
license-file:        LICENSE
author:              Jeff Hann
maintainer:          jeffhann@gmail.com
copyright:           2017 Jeff Hann
category:            CLI Tool 
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     S3, Errors
  build-depends:       base >= 4.7 && < 5
                     , text
                     , bytestring
                     , lens
                     , amazonka            == 1.4.5.*
                     , amazonka-core
                     , amazonka-s3
                     --, http-conduit
                     --, conduit
                     --, conduit-extra
                     --, unix
                     --, amazonka
                     --, amazonka-apigateway
                     --, amazonka-dynamodb
                     --, amazonka-ec2
                     --, amazonka-sqs
  default-language:    Haskell2010

executable donair-safe-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , donair-safe
                     , directory
  default-language:    Haskell2010

test-suite donair-safe-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , donair-safe
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/obihann/donair-safe
